# context-api-example

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Pipfile  README.md  requirements.txt  setup.py
account/: CMakeLists.txt  __init__.py  account.cpp  account.f90  account.h  builder.py  cffi_helpers.py  example.py  shim.py
account/implementation/: CMakeLists.txt  c_cpp_interface.cpp  cpp_implementation.cpp  cpp_implementation.h
api/: example.h  example.py
src/: bank.cpp  bank.f90  bank.h
test/: CMakeLists.txt  test.cpp  test.f90  test.py  test_account.py
